# INF236

./: .gitignore  .gitmodules
code/assignments/: CMakeLists.txt  compile_commands.json
code/assignments/.cache/clangd/index/: main.c.6D3E668C221F0CDD.idx  tests.c.A3AACB7BC307EF04.idx  tests.cpp.2D68B09678706293.idx
code/assignments/bfs/: 494_bus.mtx  abfs.c  abfs2.c  cFiles.h  driver.c  driver.h  mmio.c  pbfs.c  sbfs.c  util.c  util.h
code/assignments/radix/: CMakeLists.txt  t.hpp
code/assignments/radix/.cache/clangd/index/: main.c.822107C5A7533321.idx  mt19937-64.c.6AA05A240FC5FF3F.idx  mt19937-64.h.F1F44207C3BAEC4A.idx  radix_par.c.BAF01EA261D8C6BF.idx  radix_par.h.460954DBEA46CF10.idx  radix_seq.c.C0CCA536D1FD3E99.idx  radix_seq.h.C36B088E137EE8F8.idx  util.c.C60073C6047051B3.idx  util.h.0DB20D92DBD948AA.idx
code/assignments/radix/src/: compare  main.c  mt19937-64.c  mt19937-64.h  par  radix_par.c  radix_par.h  radix_par.h.gch  radix_seq.c  radix_seq.h  seq  util.c  util.h
code/assignments/spmv/: CMakeLists.txt  t.txt
code/assignments/spmv/.cache/clangd/index/: csr.hpp.AB961076BFC11F06.idx  io.hpp.39F8A995B46868E4.idx  main_naive.cpp.858EF1CAEC68CE78.idx  main_seq.cpp.C164993993F534A5.idx  main_shared.cpp.710DE65877276669.idx  main_smart.cpp.65C388421E53B53D.idx  mmio.cpp.61D93F850455C8FA.idx  mmio.cpp.FFD329376B6A7DC1.idx  mmio.hpp.7C498C8587BDDD80.idx  mmio.hpp.A1019AD6C88A64C3.idx  mtx.hpp.06D63BD6576C0701.idx  spmv.cpp.7FBCE2C986DA6BBE.idx  spmv.hpp.9C2CFCCDA4BB89F5.idx  test.cpp.4286E077285823B6.idx
code/assignments/spmv/include/: csr.hpp  mmio.cpp  mmio.hpp  mtx.hpp
code/assignments/spmv/matrices/: karate.mtx  test.mtx  test2.mtx  test3.mtx
code/assignments/spmv/old/: mmio.cpp  mtx.hpp
code/assignments/spmv/src/: main_naive.cpp  main_seq.cpp  main_shared.cpp  main_smart.cpp  mmio.cpp  spmv.cpp  spmv.hpp  test.cpp
code/assignments/src/: main.c  tests.c
code/tasks/: CMakeLists.txt  compile_commands.json  t.txt
code/tasks/.cache/clangd/index/: main.c.FD20E0DC5AA80E5D.idx  run.c.F6225D293B24C488.idx  simd.c.4227BFA0A970F917.idx  tests.c.107355A55580BAD1.idx  tests.cpp.E6F50AC7BB569012.idx  tests_week1.cpp.B0256112E31AC1F1.idx  week1.c.F22CF801BACE8773.idx  week1.h.1D457A8A350E7B65.idx
code/tasks/src/: band.c  bcast.c  com.c  com_bcast.c  exam.c  hello.c  helloMP.c  icom.c  lecture5-6_codes.tar  loop.c  main.c  matrixVector.c  overlap.c  overlap2.c  part1.c  part2.c  pi.c  reduce.c  ring.c  sending.c  t.c  time.c  time1.c  time2.c  time3.c
code/tasks/src/CodeSamples/chapter01/: hello.cu
code/tasks/src/addTest/: checkDimension.cu  checkThreadIndex.cu  sumArraysOnGPU-timer.cu  sumMatrixOnGPU-2D-grid-2D-block.cu
code/tasks/src/graphAlg/: cFiles.h  data_files  driver.c  mmio.h  pgc.c  pis.c  results.m  sgc.c  sis.c
code/tasks/src/lecture7_code/: addMatrices.c  mandel.c  random.c
code/tasks/src/lectures/: selectionsort.c
code/tasks/src/week1/: run.c  tests_week1.cpp  week1.c  week1.h
code/tasks/src/week2/: README  access.c  matmul.c  sekvs.c  simd.c  t.c  transpose.c
code/tasks/src/week3/: t.txt
code/tasks/src/week3/ProblemSet3/: loop.c  part1.c  part1ex1  part1ex2  part1ex3  part2.c  part2ex1  part2ex2  part2ex3
code/tasks/src/week3/ProblemSet3.1/: loop  loop.c  part1.c  part1ex1  part1ex2  part1ex3  part2.c  part2ex1  part2ex2  part2ex3  test.c
code/tasks/src/week4/: countingsort  countingsort.c  pi  pi.c  primes.c
code/tasks/src/week6/graphAlg/: driver.c
code/test/: CMakeLists.txt
code/test/.cache/clangd/index/: main.c.5E29C6EDE4B7FF91.idx
code/test/src/: main.c
notes/: assigment1.aux  assigment1.fdb_latexmk  assigment1.fls  assigment1.tex  assigment1.toc  assignment2.aux  assignment2.fdb_latexmk  assignment2.fls  assignment2.tex  assignment2.toc  assignment3.aux  assignment3.fdb_latexmk  assignment3.fls  assignment3.tex  assignment3.toc  preamble.tex  results16k.txt  results4k.txt  results8k.txt  resultsk2.txt  stream_res.txt  t.txt  week2.aux  week2.fdb_latexmk  week2.fls  week2.md  week2.tex  week4.md
notes/scripts/: compute_imbalance.py  create_arrow.py  csr_test.py  imb_res.txt  imb_res_mem.txt  imb_res_myc.txt  naive_lb_arrow.txt  naive_res_5m.txt  naive_res_arrow.txt  naive_res_memchip.txt  naive_res_mycielskian.txt  plot.py  plot_imbalance.py  shared_res_5m.txt  shared_res_arrow.txt  shared_res_memchip.txt  shared_res_mycielskian.txt  smart_lb_arrow.txt  smart_res_5m.txt  smart_res_arrow.txt  smart_res_arrow2.txt  smart_res_memchip.txt  smart_res_mycielskian.txt  stream_bench.py  stream_res.txt  stream_time.txt
zips/Assignment 1 - Kristian Sørdal/: radix_seq.c  util.h
